[package]
name = "esp-hap"
version = "0.1.0"
authors = ["Leon Camus <leon.c@gmx.de>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38.0"
esp-homekit-sdk-sys = { git = "https://github.com/28Smiles/esp-homekit-sdk-sys.git" }
anyhow = "1"
spin = "0.9.4"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
